--- a/JavaScriptAdvanced/jedi/css/typography.css
+++ b/JavaScriptAdvanced/jedi/css/typography.css
@@ -1,27 +1,10 @@
-
 @font-face {
-  font-family: "Orbitron";
+  font-family: "Orbitron", sans-serif;
   src: url("../assets/fonts/orbitron/Orbitron-VariableFont_wght.ttf")
     format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
-}
-
-@font-face {
-  font-family: "Orbitron";
-  src: url("../assets/fonts/Orbitron/Orbitron-VariableFont_wght.ttf")
-    format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Orbitron";
-  src: url("../assets/fonts/Orbitron/Orbitron-VariableFont_wght.ttf")
-    format("truetype");
-  font-weight: 700;
-  font-style: normal;
 }
 
 body {
